--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,6 +1,9 @@
 <h1>Welcome to Rewsly</h1>
 
-<h3><%= link_to "+ Add New Story", new_story_path %></h3>
+<% if user_signed_in? %>
+  <h3><%= link_to "+ Add New Story", new_story_path %></h3>
+  <h3><%= link_to "+ View My Stories", user_path(current_user) %>
+<% end %>
 
 <%= form_tag '/', method: :get do %>
   <%= search_field_tag :q, params[:q] %>
